examples/compiler_errors/fbip_fail_nonfip_call.flx
// expect: compile_error
// expect-error: E999

// parity-expected-stdout-begin
// parity-expected-stdout-end

// Aether FBIP failure regression fixture.

fn alloc(x) {
    Some(x)
}

@fbip fn bounded(f, x) {
    f(x)
}

fn main() {
    bounded(alloc, 1)
}